--- a/src/dip721_communitycoin_assets/assets/main.css
+++ b/src/dip721_communitycoin_assets/assets/main.css
@@ -24,6 +24,7 @@ body {
     background-color: #EDEDE9;
     color: #7E7E7E;
     padding: 20px;
+    text-align: left;
 }
 
 .round-border {
@@ -31,4 +32,13 @@ body {
     border: 2px solid #D5BDAF;
     margin-bottom: 50px;
     background-color: #d5bdaf55;
+}
+
+.padding {
+    margin-bottom: 30px;
+}
+
+
+.button-size{
+    min-width: 150px;
 }
