--- a/src/dip721_communitycoin_assets/src/background.scss
+++ b/src/dip721_communitycoin_assets/src/background.scss
@@ -38,7 +38,7 @@ $bg-height: 50px;
 /* Main styles */
 body {
   margin-top: 20px;
-  color: #bbbbbb;
+  color: #D5BDAF;
   text-align: center;
   /* img size is 50x50 */
   background: url($bg-url) repeat 0 0;
