--- a/src/ui/assets/main.css
+++ b/src/ui/assets/main.css
@@ -88,7 +88,20 @@ body {
     color: #D5BDAF;
 }
 
+.tabs {
+    background-color: #ffffff;
+    padding: 20px;
+    border-color: #f5f5f2;
+    border-style: solid;
+    border-bottom-width: 0ch;
+    border-top-width: 0ch;
+    border-left-width: 14px;
+    border-right-width: 14px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    outline-color: black;
 
+}
 @media only screen and (max-width: 600px) {
     .hidden-sm{
         display: none !important;
