--- a/src/ui/src/styles/proposal-styles.css
+++ b/src/ui/src/styles/proposal-styles.css
@@ -42,3 +42,24 @@
 .card-label {
     color: #a1a1a1 !important;
 }
+
+.proposal-form {
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 5px;
+    border-color: #a1a1a1;
+    border-style: solid;
+}
+
+.progress-bar {
+    width: 80%;
+    height: 50px;
+    background-color: red !important;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: white !important;
+    font-size: 40px;
+}
